Added deaths to first title

--- a/landslides/templates/index.html
+++ b/landslides/templates/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="container">
-        <h2>Network Visualization of the Distribution of Landslides</h2>
+        <h2>Network Visualization of the Distribution of Landslide Deaths</h2>
         <div class="row" style="margin-bottom:10px">
             <div class="panel panel-default">
                 <div class="panel-body">
